<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary">

    <TextView
        android:id="@+id/textDetails"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:background="@color/colorMain"
        android:gravity="center"
        android:text="@string/Details"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:padding="5dp"
        android:background="@color/colorMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDetails"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/amountView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        android:background="@color/colorMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreView"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"
        android:onClick="addMoney"
        android:text="@string/Add"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorText"
        app:layout_constraintTop_toBottomOf="@+id/amountView"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/buttonTransn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorMain"
        android:onClick="transferMoney"
        android:text="@string/Transaction"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/buttonAdd"
        app:layout_constraintStart_toStartOf="@+id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

    <Button
        android:id="@+id/buttonPayment"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorMain"
        android:onClick="startPayment"
        android:text="@string/Payment"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/buttonTransn"
        app:layout_constraintStart_toStartOf="@+id/buttonTransn"
        app:layout_constraintTop_toBottomOf="@+id/buttonTransn" />

    <Button
        android:id="@+id/buttonHist"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorMain"
        android:onClick="showHistory"
        android:text="@string/History"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/buttonPayment"
        app:layout_constraintStart_toStartOf="@+id/buttonPayment"
        app:layout_constraintTop_toBottomOf="@+id/buttonPayment" />

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorColor"
        android:onClick="closeScore"
        android:text="@string/Close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonHist"
        app:layout_constraintTop_toTopOf="@+id/buttonHist" />


</androidx.constraintlayout.widget.ConstraintLayout>