<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary">

    <TextView
        android:id="@+id/textDetails"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:background="@color/colorMain"
        android:gravity="center"
        android:text="@string/History"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorMain"
        android:ems="10"
        android:hint="@string/StartDate"
        android:onClick="firstDate"
        android:textSize="24sp"
        android:padding="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDetails" />

    <TextView
        android:id="@+id/dateTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/EndDate"
        android:textSize="24sp"
        android:onClick="secondDate"
        android:padding="6dp"
        android:background="@color/colorMain"
        app:layout_constraintStart_toStartOf="@+id/dateFrom"
        app:layout_constraintTop_toBottomOf="@+id/dateFrom" />

    <Button
        android:id="@+id/btnTakeHist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/colorMain"
        android:onClick="takeHistory"
        android:text="@string/showHist"
        app:layout_constraintBottom_toBottomOf="@+id/dateTo"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hist_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTo" />

</androidx.constraintlayout.widget.ConstraintLayout>